// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with 1 Expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render ExpenseSummary with multiple Expense 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $235.77
  </h1>
</div>
`;
